# appview

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  release-plz.toml
.github/workflows/: release-plz.yml  release.yml  rust-ci.yml  rust.yml
.zed/: settings.json
migration/: Cargo.toml
migration/src/: lib.rs  m20260426_145024_create_user_states.rs  m20260504_071943_complete_user_stats.rs  m20260514_090000_create_notifications.rs  m20260526_000000_add_indexed_at_to_record_data.rs  m20260625_000000_create_push_subscriptions.rs  m20260710_000000_add_mention_role_to_notifications.rs
migrations/: 001_initial.sql  002_author_profiles.sql  003_message_fields.sql  004_reactions.sql  005_reaction_emoji_unique.sql  006_reset_reaction_backfill.sql  007_jetstream_cursor.sql  008_message_facets.sql  009_community_membership.sql  010_community_extra_fields.sql  011_reset_community_backfill.sql  012_categories.sql  013_lexicon_corrections.sql  014_reset_community_backfill_picture.sql  016_pending_approvals_staging.sql  017_membership_nton.sql  018_message_blocked.sql  019_author_status.sql  020_author_descriptions.sql  021_user_presence.sql  022_requires_approval_to_join.sql  023_community_bans.sql  024_channel_reads.sql  025_channel_owner_only.sql
scripts/: get-community-password.sh  import-community-credentials.sh
src/: atproto.rs  backfill.rs  db.rs  did.rs  did_document.rs  emoji.rs  events.rs  jetstream.rs  main.rs  sfu.rs  webrtc.rs  well_known.rs  ws_handler.rs
src/lib/: at_uri.rs  auth_bridge.rs  author_cache.rs  blob_cache.rs  bsky.rs  channel_authz.rs  channel_unread.rs  colibri.rs  community_authz.rs  community_credentials.rs  community_record.rs  community_write.rs  crypto.rs  db.rs  did_document.rs  dismissed_applications.rs  embed_cache.rs  embed_fetch.rs  event_scope.rs  events.rs  fcm_config.rs  fcm_send.rs  get_atproto_record.rs  get_state.rs  handler.rs  http.rs  hum_client.rs  hum_guard.rs  klipy.rs  list_atproto_records.rs  map_tap_event.rs  mod.rs  moderation.rs  notification_preferences.rs  notifications.rs  owner_role_heal.rs  pds_client.rs  permissions.rs  push_send.rs  push_subscriptions.rs  (+14 more)
src/migrations/: m20260504_071943_complete_user_stats.rs  m20260513_120000_create_community_invitations.rs  m20260515_120000_create_community_credentials.rs  m20260526_000000_add_indexed_at_to_record_data.rs  m20260607_000000_rename_notifications_channel_rkey.rs  m20260624_120000_create_dismissed_applications.rs  m20260628_120000_record_data_data_to_jsonb.rs  m20260709_000000_add_vc_state_to_user_states.rs  m20260715_000000_fix_push_subscriptions_unique_key.rs  m20260715_010000_add_record_data_hot_path_indexes.rs  m20260722_000000_add_provider_to_push_subscriptions.rs  mod.rs
src/models/: author.rs  author_profiles.rs  backfill_state.rs  categories.rs  channel_read.rs  channels.rs  collection_cursors.rs  communities.rs  community.rs  community_credentials.rs  community_invitations.rs  community_members.rs  dismissed_applications.rs  firehose_cursors.rs  invite_codes.rs  jetstream_cursor.rs  list_repos_cursors.rs  message.rs  messages.rs  mod.rs  notifications.rs  outbox_buffers.rs  pending_approvals.rs  prelude.rs  push_subscriptions.rs  reaction.rs  reactions.rs  (+6 more)
(+83 files in other folders)
