[package]
name = "colibri-appview"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sentry = "0.47.0"
dotenvy = "0.15"
pretty_env_logger = "0.5.0"
log = "0.4.29"
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "schema-sync", "entity-registry", "mock" ] }
reqwest = { version = "0.13", features = ["json"] }
futures = "0.3"
trust-dns-resolver = "0.23.2"
serde_json = "1.0"
rocket_ws = "0.1.1"
k256 = "0.13"
hex = "0.4"
