[package]
name = "colibri-appview"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sentry = "0.47.0"
dotenvy = "0.15"
pretty_env_logger = "0.5.0"
log = "0.4.29"
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "schema-sync", "entity-registry", "mock" ] }
reqwest = { version = "0.13", features = ["json"] }
futures = "0.3"
trust-dns-resolver = "0.23.2"
serde_json = "1.0"
rocket_ws = "0.1.1"
k256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"] }
p256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"] }
ecdsa = { version = "0.16", features = ["der", "hazmat"] }
hex = "0.4"
jsonwebtoken = "9"
base64 = "0.22"
thiserror = "2"
bs58 = "0.5"
sha2 = "0.10"
tokio-tungstenite = "0.29"
futures-util = "0.3.32"
async-stream = "0.3.6"
rocket_cors = "0.6.0"
