[workspace]
members = ["."]

[package]
name = "colibri-appview"
version = "0.1.9"
edition = "2024"

[profile.release]
debug = "line-tables-only"

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sentry = "0.47.0"
dotenvy = "0.15"
pretty_env_logger = "0.5.0"
log = "0.4.29"
sea-orm = { version = "2.0.0-rc", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros", "schema-sync", "entity-registry", "mock" ] }
# DB migrations, previously the standalone `migration` workspace crate. Merged
# into this binary as `src/migrations` so the package has no local-only path
# dependency (which made `cargo package`, and thus release-plz, impossible).
sea-orm-migration = { version = "2.0.0-rc", features = [ "runtime-tokio-rustls", "sqlx-postgres" ] }
reqwest = { version = "0.13", features = ["json", "form"] }
futures = "0.3"
trust-dns-resolver = "0.23.2"
serde_json = "1.0"
rocket_ws = "0.1.1"
k256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"] }
p256 = { version = "0.13", features = ["ecdsa", "ecdsa-core"] }
ecdsa = { version = "0.16", features = ["der", "hazmat"] }
hex = "0.4"
jsonwebtoken = "9"
base64 = "0.22"
thiserror = "2"
bs58 = "0.5"
sha2 = "0.10"
tokio-tungstenite = "0.29"
futures-util = "0.3.32"
async-stream = "0.3.6"
rocket_cors = "0.6.0"
regex = "1.12.3"
rand = "0.8"
aes-gcm = "0.10"
scraper = "0.20"
web-push = { version = "0.11", default-features = false }
bytes = "1"
lru = "0.12"

[dev-dependencies]
wiremock = "0.6"

[target.'cfg(windows)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(not(windows))'.dependencies]
mediasoup = "0.22"
